package com.bitpub.tournament.model;

public enum MatchStatus {
    SCHEDULED,
    ONGOING,
    FINISHED
}
