@startuml
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor Black
}

package "BitPub Entities (DDD Style)" {

    class User {
        - id: UUID
        - email: String
        - passwordHash: String
        - role: Role
    }

    enum Role {
        PLAYER
        LOCALE_ADMIN
        GAME_ADMIN
        PLATFORM_ADMIN
    }

    class Locale {
        - id: UUID
        - name: String
        - address: String
        - ownerId: UUID
    }

    class Machine {
        - id: UUID
        - serialNumber: String
        - localeId: UUID
        - gameId: UUID
        - status: Status
    }

    class GameDefinition {
        - id: UUID
        - name: String
        - ruleSetVersion: String
    }

    class Match {
        - id: UUID
        - machineId: UUID
        - status: MatchStatus
        - teamAScore: int
        - teamBScore: int
        - startTime: Instant
        + processEvent(Event)
    }

    enum MatchStatus {
        WAITING_FOR_PLAYERS
        IN_PROGRESS
        FINISHED
        CANCELED
    }

    class SensorEvent {
        - eventId: UUID
        - matchId: UUID
        - payload: JSON
    }

    class Tournament {
        - id: UUID
        - gameId: UUID
        - currentRound: int
    }

    User "1" -- "1" Role
    User "1" -- "0..*" Locale : owns (LOCALE_ADMIN)
    Locale "1" *-- "0..*" Machine
    Machine "0..*" -- "1" GameDefinition
    Match "0..*" -- "1" Machine
    Match "1" *-- "0..*" SensorEvent
    Tournament "0..*" -- "1" GameDefinition
}
@enduml
